--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <p id="splash-footer">Made by X</p>
     </div>
 
-    <!-- Welcome Page -->
+    <!-- Welcome Screen -->
     <div id="welcome-screen">
         <h1 id="typing-text"></h1>
-        <p id="swipe-up">Swipe Up </p>
+        <p id="swipe-up">Swipe Up</p>
     </div>
 
     <!-- Main Page -->
@@ -37,8 +37,7 @@
 
     <script src="script.js"></script>
 </body>
-</html>
-        </div>
+</html>        </div>
     </div>
 
     <script src="script.js"></script>
