--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- Splash Screen -->
     <div id="splash-screen">
-        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="Custom Image">
+        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg" alt="Custom Image">
         <p id="splash-text">Lara</p>
         <p id="splash-footer">Made by X</p>
     </div>
 
-    <!-- Welcome Screen -->
+    <!-- Welcome Page -->
     <div id="welcome-screen">
         <h1 id="typing-text"></h1>
         <p id="swipe-up">Swipe Up</p>
@@ -25,12 +25,19 @@
     <div id="main-page">
         <h1>Welcome</h1>
         <div class="profile">
-            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="User Image">
+            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg" alt="User Image">
             <p id="custom-text">Lara</p>
         </div>
         <div class="buttons">
-            <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&integration_type=0&scope=bot')">Invite</button>
+            <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&scope=bot')">Invite</button>
             <button onclick="redirectTo('https://forms.gle/TU9SxCcrH41obCb68')">Suggestion</button>
+            <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partners</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>crH41obCb68')">Suggestion</button>
             <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partner Server</button>
         </div>
     </div>
