--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- Splash Screen -->
     <div id="splash-screen">
-        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg" alt="Custom Image">
+        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="Custom Image">
         <p id="splash-text">Lara</p>
         <p id="splash-footer">Made by X</p>
     </div>
 
-    <!-- Welcome Page -->
+    <!-- Welcome Screen -->
     <div id="welcome-screen">
         <h1 id="typing-text"></h1>
         <p id="swipe-up">Swipe Up</p>
@@ -24,39 +24,86 @@
     <!-- Main Page -->
     <div id="main-page">
         <h1>Welcome</h1>
-        <div class="profile">
-            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg" alt="User Image">
+        <div class="profile-container">
+            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="User Image">
             <p id="custom-text">Lara</p>
         </div>
         <div class="buttons">
-            <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&scope=bot')">Invite</button>
+            <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&integration_type=0&scope=bot')">Invite</button>
             <button onclick="redirectTo('https://forms.gle/TU9SxCcrH41obCb68')">Suggestion</button>
-            <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partner Server</button>
+            <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partners</button>
+            <button onclick="goToInfoPage()">Info</button>
         </div>
+    </div>
+
+    <!-- Info Page -->
+    <div id="info-page">
+        <div class="info-container">
+            <h2>Title: Bot Help List</h2>
+            <p>🌟 Ultimate Bot Commands</p>
+            <p>Bot Prefix "-"</p>
+            <ul>
+                <li>-help</li>
+            </ul>
+
+            <h3>💰 Economy</h3>
+            <ul>
+                <li>-balance, -work, -daily</li>
+                <li>-pay @user &lt;amount&gt;</li>
+            </ul>
+
+            <h3>📞 Userphone</h3>
+            <ul>
+                <li>-setphone &lt;number&gt;</li>
+                <li>-call &lt;number&gt;</li>
+                <li>-sms &lt;number&gt; &lt;message&gt;</li>
+            </ul>
+
+            <h3>🎲 Random Chat</h3>
+            <ul>
+                <li>-randomchat, -hangup</li>
+                <li>-setcallchannel &lt;#channel&gt;</li>
+            </ul>
+
+            <h3>💍 Social</h3>
+            <ul>
+                <li>-marry @user</li>
+                <li>-divorce</li>
+                <li>-profile</li>
+                <li>-setbirthday &lt;MM-DD&gt;</li>
+                <li>-adopt @user</li>
+            </ul>
+
+            <h3>⚙️ Admin</h3>
+            <ul>
+                <li>-toggle &lt;feature&gt; &lt;on/off&gt;</li>
+                <li>-settings</li>
+                <li>-setlevelchannel &lt;#channel&gt;</li>
+                <li>-setcountingchannel &lt;#channel&gt;</li>
+                <li>-smartcounting &lt;on/off&gt;</li>
+                <li>-startgiveaway &lt;duration&gt; &lt;winners&gt; &lt;prize&gt;</li>
+            </ul>
+
+            <h3>📊 Leveling</h3>
+            <ul>
+                <li>-level</li>
+            </ul>
+
+            <h3>🔢 Counting Game</h3>
+            <ul>
+                <li>-setcountingchannel &lt;#channel&gt;</li>
+                <li>-smartcounting &lt;on/off&gt;</li>
+                <li>Enabled in set channel</li>
+            </ul>
+        </div>
+        <button id="back-button" onclick="goToMainPage()">< Back</button>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-ement
-            index++;
-            setTimeout(typeCharacter, 100); // Delay for each character
-        }
-    }
 
-    element.innerHTML = ""; // Clear any existing text
-    typeCharacter(); // Start typing effect
-}
 
-// Redirect Function for buttons
-function redirectTo(url) {
-    window.location.href = url; // Redirect to the specified URL
-}ps://discord.gg/TYMVHDZ3T8')">Partner Servers</button>
-            <button class="info-button" onclick="redirectTo('info.html')">Info</button>
-        </div>
-    </div>
 
-    <script src="script.js"></script>
-</body>
-</html></body>
-</html>
+
+
