--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lara</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Splash Screen -->
     <div id="splash-screen">
-        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="Custom Image">
+        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd" alt="Custom Image">
         <p id="splash-text">Lara</p>
         <p id="splash-footer">Made by X</p>
     </div>
@@ -25,7 +29,7 @@
     <div id="main-page">
         <h1>Welcome</h1>
         <div class="profile-container">
-            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="User Image">
+            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd" alt="User Image">
             <p id="custom-text">Lara</p>
         </div>
         <div class="buttons">
@@ -102,8 +106,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
