--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Your+Font+Name&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <!-- Splash Screen -->
     <div id="splash-screen">
-        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd" alt="Custom Image">
+        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="Custom Image">
         <p id="splash-text">Lara</p>
         <p id="splash-footer">Made by X</p>
     </div>
@@ -29,19 +28,19 @@
     <div id="main-page">
         <h1>Welcome</h1>
         <div class="profile-container">
-            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd" alt="User Image">
+            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="User Image">
             <p id="custom-text">Lara</p>
         </div>
         <div class="buttons">
             <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&integration_type=0&scope=bot')">Invite</button>
             <button onclick="redirectTo('https://forms.gle/TU9SxCcrH41obCb68')">Suggestion</button>
             <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partners</button>
-            <button onclick="goToInfoPage()">Info</button>
+            <button onclick="alert('Navigation disabled')">Info</button>  <!-- Changed to alert instead of navigation -->
         </div>
     </div>
 
     <!-- Info Page -->
-    <div id="info-page">
+    <div id="info-page" style="display:none;">
         <div class="info-container">
             <h2>Title: Bot Help List</h2>
             <p>🌟 Ultimate Bot Commands</p>
@@ -100,7 +99,7 @@
                 <li>Enabled in set channel</li>
             </ul>
         </div>
-        <button id="back-button" onclick="goToMainPage()">< Back</button>
+        <button id="back-button" onclick="alert('Navigation disabled')">< Back</button>  <!-- Changed to alert instead of navigation -->
     </div>
 
     <script src="script.js"></script>
