--- a/index.html
+++ b/index.html
@@ -3,38 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lara</title>
+    <title>Lara's Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Your+Font+Name&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Splash Screen -->
     <div id="splash-screen">
-        <img id="splash-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="Custom Image">
-        <p id="splash-text">Lara</p>
-        <p id="splash-footer">Made by X</p>
+        <img src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Image">
+        <div class="circle-animation"></div>
+        <div class="text">Lara</div>
+        <div class="made-by">Made By X</div>
     </div>
 
-    <!-- Welcome Screen -->
-    <div id="welcome-screen">
-        <h1 id="typing-text"></h1>
-        <p id="swipe-up">Swipe Up</p>
+    <div id="black-screen">
+        <h1 id="welcome-text">Welcome</h1>
+        <div id="swipe-up">Swipe Up</div>
     </div>
 
-    <!-- Main Page -->
-    <div id="main-page">
+    <div id="main-page" style="display: none;">
         <h1>Welcome</h1>
-        <div class="profile-container">
-            <img id="profile-img" src="https://media.discordapp.net/attachments/1330537072951296096/1338433038056558663/a8479a922b151b03df56a6db105dc5dd.jpg?ex=67ab1067&is=67a9bee7&hm=e15a978c99a38542d2d131b0a4d6bb512c813ab4b4eed24e282efe1fa7b2b7e8&" alt="User Image">
-            <p id="custom-text">Lara</p>
+        <div class="image-lara-container">
+            <img src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Circle Image">
+            <div>Lara</div>
         </div>
         <div class="buttons">
-            <button onclick="redirectTo('https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&integration_type=0&scope=bot')">Invite</button>
-            <button onclick="redirectTo('https://forms.gle/TU9SxCcrH41obCb68')">Suggestion</button>
-            <button onclick="redirectTo('https://discord.gg/TYMVHDZ3T8')">Partners</button>
+            <button onclick="window.location.href='https://discord.com/oauth2/authorize?client_id=1338143657877835797&permissions=8&integration_type=0&scope=bot'">Invite</button>
+            <button onclick="window.location.href='https://discord.gg/TYMVHDZ3T8'">Partners</button>
+            <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLSeORFe4lpAfudvhLyUz2lttYyrjVzwXsnem0IxJnCau5N1QCg/viewform?usp=header'">Suggestions</button>
+            <button onclick="window.location.href='info.html'">Info</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
+s</button>
             <button onclick="alert('Navigation disabled')">Info</button>  <!-- Changed to alert instead of navigation -->
         </div>
     </div>
