--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="splash-screen">
-        <img src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Image">
+        <img class = "circle-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Image">
         <div class="circle-animation"></div>
         <div class="text">Lara</div>
         <div class="made-by">Made By X</div>
@@ -23,7 +23,7 @@
     <div id="main-page" style="display: none;">
         <h1>Welcome</h1>
         <div class="image-lara-container">
-            <img src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Circle Image">
+            <img class = "circle-image" src="https://media.discordapp.net/attachments/1330537072951296096/1338512788045303819/Picsart_25-02-10_19-41-23-248.png?ex=67ab5aad&is=67aa092d&hm=4e7eb47e87f58fdbe60280777452e2a60a03bde290d4dc22e05f7f07f4670cb7&" alt="Custom Circle Image">
             <div>Lara</div>
         </div>
         <div class="buttons">
@@ -37,8 +37,7 @@
     <script src="script.js"></script>
 </body>
 </html>
-s</button>
-            <button onclick="alert('Navigation disabled')">Info</button>  <!-- Changed to alert instead of navigation -->
+'Navigation disabled')">Info</button>  <!-- Changed to alert instead of navigation -->
         </div>
     </div>
 
